* fix: Text selection not visible in modal dialog header

--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -34,15 +34,15 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-::-moz-selection {
-  color: white;
-  background: $blue;
-}
+// ::-moz-selection {
+//   color: white;
+//   background: $blue;
+// }
 
-::selection {
-  color: white;
-  background: $blue;
-}
+// ::selection {
+//   color: white;
+//   background: $blue;
+// }
 
 a {
   color: $blue;
